# free-tray-games

./: Cargo.toml  README.md  icons.rc  installer.iss
.github/workflows/: check-version.yml  release.yml
src/: config.rs  games.rs  logger.rs  main.rs  notifications.rs  resource.rs  tray.rs
src/notify_body/: com_helpers.rs  mod.rs
src/tray_body/: funcs.rs  icons.rs  mod.rs
