[package]
name = "free-tray-games"
version = "0.0.4"
edition = "2021"
license = "Apache-2.0"
authors = ["Maciej \"Maxie\" Mieńko <mienkomaciej@gmail.com>"]
description = "A lightweight tray application that notifies you about free games available on Steam, Epic Games Store, and GOG — powered by the gamerpower.com API."
homepage = "https://github.com/MrMaxie/free-tray-games"

[package.metadata]
nice_name = "FreeTrayGames"

[package.metadata.winres]
windows_subsystem = "windows"

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
colored = "3.0.0"
open = "5.3.2"
win-toast-notify = "0.1.6"
md5 = "0.7.0"
hex = "0.4.3"
bincode = "2.0.1"
chrono = "0.4.40"
toml = "0.8.12"
winreg = "0.55.0"
windows-sys = { version = "0.52.0", features = [
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
] }
tray-item = "0.10.0"
padlock = "0.2.0"
anyhow = { version = "1.0.97", features = ["std", "backtrace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }

[build-dependencies]
windres = "*"
